--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
 <div class="header"><img src="./icon.png" alt=""></div>
 
+<div class="text1"><p>Não estás cansado de vestir mal?!</p></div>
+<div class="text2"><p>Vem para a <a style="color:red; cursor: pointer;">Big Drip</a>, aqui encontras o melhor para ti.</p></div>
     <!-- the images -->
     <div class="swiper mySwiper">
 
