--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 function redirect()
 {
-    setTimeout(()=> window.open("https://api.whatsapp.com/send?phone=244930212830&text=*Ol%C3%A1!*",'_blank'), 700)
+    setTimeout(()=> window.open("https://api.whatsapp.com/send?phone=244930212830&text=*Ol%C3%A1%20Big%20drip.*",'_blank'), 700)
     
 }
   </script>
